ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # don't force redirecting http to https
    # We rewrite the path /${yourName} to /, so if you go to browser with 34.78.158.222.nip.io/${yourName}/actuator/health,
    # it will resolve it to /actuator/health in the application (without the yourname in the path)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 34.78.158.222.nip.io
      http:
        paths:
          - path: /yourName/(.*)
            pathType: Prefix     
            backend:
              service:
                name: demo
                port: 
                  number: 80
